# langgraph-rag-guardrails

./: .env.example  .gitignore  Makefile  README.md  docker-compose.langfuse.yml  docker-compose.yml  postman_collection.json  pyproject.toml
app/: config.py  main.py
app/api/: middleware.py  routes.py  schemas.py
app/graph/: builder.py  state.py
app/graph/nodes/: build_prompt.py  cache_lookup.py  cache_store.py  embed_query.py  fuse_rerank.py  input_rails.py  llm_generate.py  output_guardrails.py  retrieve.py
app/guardrails/: input_guard.py  output_guard.py
app/services/: bm25_index.py  embedding.py  llm.py  prompt_registry.py  reranker.py  semantic_cache.py  vector_store.py
ingest/: chunker.py  loader.py  run.py
knowledge_base/: 01_onboarding_overview.md  02_first_day_checklist.md  03_pto_policy.md  04_sick_leave_policy.md  05_remote_work_policy.md  06_performance_review_process.md  07_goal_setting_okrs.md  08_compensation_philosophy.md  09_health_benefits.md  10_dental_vision_benefits.md  11_401k_retirement_plan.md  12_parental_leave_policy.md  13_code_of_conduct.md  14_anti_harassment_policy.md  15_expense_reimbursement.md  16_equipment_policy.md  17_learning_development_budget.md  18_offboarding_process.md  19_employee_referral_program.md  20_workplace_safety.md
prompts/: templates.yaml
static/: index.html
tests/: conftest.py
tests/e2e/: test_guardrails.py  test_happy_path.py
tests/unit/: test_guardrails.py  test_prompt_registry.py  test_rrf_fusion.py  test_semantic_cache.py
